# chess

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: app.h  board.h  fpsCounter.h  global.h  minimax.h  player.h  renderer.h
source/: Vector2.cpp  app.cpp  board.cpp  main.cpp  minimax.cpp  player.cpp  renderer.cpp
